banish .pyc files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,29 @@
-# images #
-##########
+# data directory contents #
+###########################
+
+*.xls
+*.xlsx
+*.csv
+*.nc
+*.cdf
+*.download
+
+# compiled files #
+##################
+
+*.pyc
+
+
+# image files #
+###############
 
 *.png
+**/*.png
 *.svg
+
+# System OS files #
+###################
+
+.DS_Store
+*.DS_Store
+
