update config files for yaml usage

--- a/config_files/db_config_mooring.yaml
+++ b/config_files/db_config_mooring.yaml
@@ -1,5 +1,5 @@
 ---
-sytems:
+systems:
   pavlof:
     host: localhost
     port: 3306
@@ -12,5 +12,5 @@ login:
   user: viewer  
 
 database: 
-  database: EcoFOCI_Cruises
+  database: EcoFOCI
   
